# snaki

./: config.json  config_last_model_no_ui.json  config_new_model_no_ui.json  data.json  pyproject.toml
snake_ai/: __init__.py  __main__.py  agent.py  constants.py  game.py  helper.py  json_manager.py  model.py  persistent_data.py  record_model.py  render.py
snake_ai/rewards/: __init__.py  death_reward.py  food_reward.py  normal_reward.py
