[tool.poetry]
name = "snake_ai"
version = "0.0.1" # <<FORCE_BUMP>>
description = "Snake Game"
authors = ["Semjon Geist <semjon-geist@gmx.de>"]
license = "Not open source"
readme = "README.md"
packages = [
    { include = "snake_ai" },
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.4.3"
numpy = "^1.24.3"

[tool.poetry.scripts]
snake = "snake_ai.__main__:main"

[tool.bandit]
skips = [] # "B403", "B404", "B603", "B607"

[tool.black]
line-length = 120
skip-string-normalization = false

[tool.ruff]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 10

[tool.flake8]
select = ["B","B9","C","D","DAR","E","F","N","RST","B","W"]
ignore = ["W503", "D205"] # "E203","E501","RST201","RST203","RST301", "D100","N813","RST304","WPS412"
max-line-length = 120
max-complexity = 10
docstring-convention = "google"
per-file-ignores = ["tests/*:S101"]
exclude =[".git","__pycache__","docs/source/conf.py,build*","dist/*",".venv"]
strictness="long"
docstring_style="sphinx"

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
disable_error_code = "misc"


[tool.isort]
skip = [] # isort different behaviour on ci
force_sort_within_sections=true
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"

[tool.coverage.paths]
source = ["snake_ai", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["snake"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"
